ags (0.9.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsExportSoundcard to don't add device as being NULL
	* fixed ags_lv2_option_manager_get_option() to lookup correctly
	* new unit-test ags_lv2_option_manager_test.c

ags (0.9.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented new task AgsResetPeak
	* implemented ags_audio_buffer_util_peak() and related
	* refactored ags-peak recall to use above and compute only as needed

ags (0.9.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed memory leak related to mutex attributes
	* fixed deny multi-start of AgsChannelThread or AgsAudioThread
	* fixed deny multi-stop of AgsChannelThread or AgsAudioThread
	* minor code improvements

ags (0.9.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed many missing return values
	* fixed some unitialized pointers
	* fixed 64 bit portability issue in ags_recall_template_find_all_type()

ags (0.9.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed unitialized pointer in AgsCellPattern and AgsPatternBox animation

ags (0.9.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed possible concurrent access in ags-peak related code
	* fixed led array related bug that didn't show animation of AgsCellPattern and AgsPatternBox

ags (0.9.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed crash after drum restore and doing sequencer playback

ags (0.9.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed possible concurrent access in ags_cell_pattern.c
	* fixed finalize to call parent class of managers
	* fixed finalize to reset global variable after finalize of managers
	* fixed g_list_position() call to have nested g_list_find() in ags_polling_thread.c
	* fixed missing return in ags_destroy_entry_alloc()
	* fixed AGS_TASK_GET_CLASS() macro to remove not opened paranthesis