@@ -127,6 +127,7 @@ ags_lv2_option_ressource_alloc
 ags_lv2_option_manager_ressource_insert
 ags_lv2_option_manager_ressource_remove
 ags_lv2_option_manager_ressource_lookup
+ags_lv2_option_manager_ressource_lookup_extended
 ags_lv2_option_manager_get_option
 ags_lv2_option_manager_set_option
 ags_lv2_option_manager_lv2_options_get
